BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Multichannel_Content_Asset_vod__c.object
<CustomObject>
    <description>The Multichannel_Content_Asset_vod object stores supporting asset metaData for Multichannel_Content_vod metData.</description>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Description of the slide. Displayed to viewers as captions under thumbnails.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Detail Group associated to the slide</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Multichannel Content Assets (Detail Group)</relationshipLabel>
        <relationshipName>Multichannel_Content_Assets1_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Order_vod__c</fullName>
        <description>Display order of the slide</description>
        <label>Display Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HTML_File_Name_vod__c</fullName>
        <description>File name for HTML content which utilizes the CLM packaging structure</description>
        <label>HTML File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTML_Height_vod__c</fullName>
        <description>Height of fixed sized HTML presentations</description>
        <label>HTML Height</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HTML_Width_vod__c</fullName>
        <description>Height of fixed sized HTML presentations</description>
        <label>HTML Width</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Message_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Key Message associated to the slide</description>
        <label>Key Message</label>
        <referenceTo>Key_Message_vod__c</referenceTo>
        <relationshipLabel>Multichannel Content Assets</relationshipLabel>
        <relationshipName>Multichannel_Content_Assets_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language_vod__c</fullName>
        <description>Language attribute of the content. The picklist values can be expanded by the customer as needed. Values should be ISO codes of the associated language.</description>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Media_File_Name_vod__c</fullName>
        <description>Media File Name used for gotoSlide</description>
        <label>Media File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Type_vod__c</fullName>
        <description>Media type of the main content</description>
        <label>Media Type</label>
        <picklist>
            <picklistValues>
                <fullName>PDF_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Image_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTML_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Multichannel_Content_vod__c</fullName>
        <description>The parent Multichannel Presentation</description>
        <label>Multichannel Content</label>
        <referenceTo>Multichannel_Content_vod__c</referenceTo>
        <relationshipLabel>Multichannel Content Assets</relationshipLabel>
        <relationshipName>Multichannel_Content_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product associated to the slide</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Multichannel Content Assets (Product)</relationshipLabel>
        <relationshipName>Multichannel_Content_Assets_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of the slide on the CDN. A piece of content will either be &apos;Approved&apos;, &apos;Staged&apos;, or &apos;Expired&apos;</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staged_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>External Id used by Veeva CRM</description>
        <externalId>true</externalId>
        <label>Veeva External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vault_DNS_vod__c</fullName>
        <description>Vault DNS of the document.</description>
        <label>Vault DNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_Doc_Id_vod__c</fullName>
        <description>Vault ID of the document</description>
        <label>Vault Doc Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_External_Id_vod__c</fullName>
        <description>External ID from Vault</description>
        <label>Vault External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_GUID_vod__c</fullName>
        <description>Global Unique Identifier for Vault instance where this document resides.</description>
        <label>Vault GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_Last_Modified_Date_Time_vod__c</fullName>
        <description>Last modified date time of the content as reported by Vault.</description>
        <label>Vault Last Modified Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Version_vod__c</fullName>
        <description>Version of the Vault Document.</description>
        <label>Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Multichannel Content Asset</label>
    <nameField>
        <label>Multichannel Content Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Multichannel Content Assets</pluralLabel>
    <recordTypes>
        <fullName>Engage_Slide_vod</fullName>
        <active>true</active>
        <description>For Engage Slides</description>
        <label>Engage_Slide_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>